# mimoe

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: release.yml  tests.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/clipd/: ClipApi.kt  ClipBus.kt  Crypto.kt  MainActivity.kt  Model.kt  RealtimeService.kt  SecureStore.kt  ShareActivity.kt
android/app/src/main/java/app/clipd/ui/: Home.kt  Onboarding.kt  Settings.kt
android/app/src/main/java/app/clipd/ui/theme/: Theme.kt
android/app/src/main/res/values/: themes.xml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
desktop/scripts/: dev-signed.sh  sign-dev.sh
desktop/src/: App.tsx  index.css  main.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: apps.rs  blobz.rs  clipboard.rs  crypto.rs  lib.rs  main.rs  realtime.rs  seed.rs  store.rs
desktop/src-tauri/src/apps/: macos.rs  mod.rs  windows.rs
desktop/src-tauri/src/clip_sys/: macos.rs  mod.rs  windows.rs
desktop/src/components/history/: ClipCard.tsx  ClipImage.tsx  EmptyState.tsx  FilterChips.tsx  Footer.tsx  HistoryView.tsx  SearchHeader.tsx
desktop/src/components/onboarding/: Illustrations.tsx  OnboardingView.tsx  SeedInput.tsx  SeedQuiz.tsx  SeedReveal.tsx
desktop/src/components/settings/: BlacklistGroup.tsx  Group.tsx  SettingsView.tsx
desktop/src/components/ui/: Button.tsx  Icon.tsx  Kbd.tsx  Switch.tsx
desktop/src/context/: AppContext.tsx  ClipsContext.tsx  LanguageContext.tsx  ThemeContext.tsx  ToastContext.tsx
desktop/src/hooks/: useBlacklist.ts  useFreshClip.ts  useOnboarding.ts  useUpdater.ts
desktop/src/i18n/: en.json  es.json  fr.json  pt.json
desktop/src/lib/: api.ts  clips.ts  cx.ts  detect.ts  format.ts  serverUrl.ts  sound.ts  tauri.ts  types.ts
mobile/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/patches/: react-native-argon2+4.0.0.patch
mobile/src/: api.ts  clipCache.ts  clipEvents.ts  crypto.ts  hidden.ts  imageCache.ts  notify.ts  realtime.ts  seed.ts  serverUrl.ts  store.ts  theme.ts  theme.tsx  useClips.ts
mobile/src/i18n/: en.json  es.json  fr.json  index.tsx  pt.json
mobile/src/screens/: Home.tsx  Illustrations.tsx  Onboarding.tsx  Settings.tsx
server/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  composer.json  docker-compose.yml
server/app/Console/Commands/: PairDevice.php  PurgeExpiredClips.php
server/app/Events/: ClipReceived.php  ClipsDeleted.php
server/app/Http/Controllers/: AuthController.php  BlobController.php  ClipController.php  PushController.php
server/app/Http/Middleware/: AuthenticateDevice.php
server/app/Models/: Blob.php  Clip.php  Device.php
server/app/Services/: PushService.php
server/bootstrap/: app.php
server/config/: clipd.php  logging.php  mimoe.php
server/database/migrations/: 2026_07_12_200906_create_clips_table.php  2026_07_12_200906_create_devices_table.php  2026_07_13_085928_add_user_id_to_clips_and_devices.php  2026_07_13_112640_add_images_blobs.php  2026_07_13_120000_add_push_token_to_devices.php  2026_07_15_120000_add_mime_to_clips.php  2026_07_15_130000_blobs_data_longtext.php  2026_07_16_100000_add_pinned_to_clips.php  2026_07_16_140000_add_dedup_hash_to_clips.php
server/routes/: api.php  channels.php  console.php
server/tests/Feature/: AuthTest.php  BlobTest.php  ClipTest.php  PurgeTest.php  PushTokenTest.php
