[package]
name = "clipd"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Crypto E2E : derivation Argon2id + AES-256-GCM
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
# Stockage secret dans le Keychain macOS
keyring = { version = "3", features = ["apple-native"] }
# Ecriture presse-papier
arboard = "3"
# Encodage/decodage PNG (images du presse-papier)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff"] }
# Effet de flou macOS (look Raycast/Spotlight)
window-vibrancy = "0.6"
# Emission : lecture NSPasteboard native (changeCount + type sensible), HTTP, uuid, timestamp
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSData", "NSBundle", "NSURL"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# WebSocket NATIF (protocole Pusher/Reverb) : tourne dans un thread Rust, jamais gele
# par le hide de fenetre (contrairement a pusher-js dans la webview WKWebView).
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
plist = "1"
icns = "0.3"

